--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,18 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: dmmx
+email: dmmx@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Life is short and there is so much to learn and do. This site documents some of
+  my experiences in technology. Some articles have to do with modern solutions like 
+  Artificial Intelligence and Cloud Computings, others have to do with my geeky hobbies
+  in retro computing.
 domain: dmmx.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://dmmx.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# twitter_username: jekyllrb
+github_username:  dmmx
 
 # Build settings
 theme: minima
